--- a/20170808/index.html
+++ b/20170808/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="">
-    <script src="./main.js"></script>
 </head>
 <body>
-<pre>
-    
-</pre>
+    <script>
+
+        console.log();
+    </script>
 </body>
 </html>
