--- a/20170808/index.html
+++ b/20170808/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="./main.js"></script>
 </head>
 <body>
-    <script>
 
-        console.log();
-    </script>
 </body>
 </html>
