--- a/20170808/index.html
+++ b/20170808/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="Test" class="box"></div>
+    <div id="Test1" class="box"></div>
+    <div id="Test2" class="box"></div>
+    <div id="Test3" class="box"></div>
+    <div id="Test4" class="box"></div>
+    <div id="Test5" class="box"></div>
+    <div id="Test6" class="box"></div>
     <script src="./main.js"></script>
 </body>
 </html>
