--- a/20170815_start/1.html
+++ b/20170815_start/1.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta keywords="第一天,HTML,mrakdown">
-    <meta  content="这是我第一天学习了HTML的课程，以及打开网页浏览源代码的方法">
+    <meta name="keywords" content="第一天,HTML,mrakdown">
+    <meta name="description" content="这是我第一天学习了HTML的课程，以及打开网页浏览源代码的方法">
+    <link rel="stylesheet" href="./style.css">
+
     <title>第一天的HTML</title>
 </head>
 <body>
