--- a/20170815_start/1.html
+++ b/20170815_start/1.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="keywords" content="第一天,HTML,mrakdown">
     <meta name="description" content="这是我第一天学习了HTML的课程，以及打开网页浏览源代码的方法">
     <link rel="stylesheet" href="./style.css">
 
     <title>第一天的HTML</title>
+    <b>12</b>
+    <i>13</i>
+    <u>13</u>
+    <del>12</del>
+    <sup>12</sup>
+    <sub>14</sub>
+
+    <h1>这是一个标题</h1>
+    <p>dhaskjdhaskjdh<br></p>
+    <p>dsahdkjsahdkja</p>
+    <hr>
+    <p>sdsddfgdgdgd
+        ajdkashfkjsaf</p>
+    <p>sdasdkjsafaskj
+        tstsetsetfjfk</p>
+        <div>123</div>
+        <div>123</div>
+        <div>123</div>
+        <pre>
+            12124314
+        </pre>
 </head>
 <body>
-    
+    <h1>说明</h1>
+    <hr>
+    <h2>知识介绍</h2>
+    <hr>
+    html是我们前端三大语言之一，主要用来描述一个网页由哪些元素构成，以及这些元素的从属关系
+    <h2>学习目标</h2>
+    <hr>
+    熟悉一款编辑器，了解html，掌握html基本语法，基本文本标签
+    <hr>
+    <hr>
 </body>
 </html>
