--- a/20170817_form/index2.html
+++ b/20170817_form/index2.html
@@ -27,7 +27,7 @@
 <input type="reset" style="width:100px;height:35px;" value="获取验证码">
 <br>
 <br>
-<font size="1">我已阅读并同意<a href="">《京东用户协议》</a>
+<font size="1">我已阅读并同意<a href="">《京东用户注册协议》</a>
 <br>
 <br>
 <input type="submit" style="width:346px;height:40px;" value="立即注册">
