--- a/20170818_css/index.html
+++ b/20170818_css/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="box" id="Main"></div>
+  <div class="box" id="Main" ></div>
+  <div clsss="box2" style="width:100px;height:100px;background:#ff0"></div>
+<ul>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+<nav>
+  <ul>
+    <li></li>
+  </ul>
+</nav>
+<div></div>
+<p></p>
+<blockquote></blockquote>
+<div></div>
+<div>
+  <p><span></span><em></em></p>
+  <blockquote></blockquote>
+</div>
+<div>
+  <header>
+    <ul>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul>
+  </header>
+  <footer>
+    <p></p>
+  </footer>
+</div>
 </body>
 </html>
