--- a/20170818_css/index.html
+++ b/20170818_css/index.html
@@ -1,45 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 <body>
-  <div class="box" id="Main" ></div>
-  <div clsss="box2" style="width:100px;height:100px;background:#ff0"></div>
-<ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ul>
-<nav>
-  <ul>
-    <li></li>
-  </ul>
-</nav>
-<div></div>
-<p></p>
-<blockquote></blockquote>
-<div></div>
-<div>
-  <p><span></span><em></em></p>
-  <blockquote></blockquote>
-</div>
-<div>
-  <header>
-    <ul>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-    </ul>
-  </header>
-  <footer>
-    <p></p>
-  </footer>
-</div>
+  <form>
+    <input >
 </body>
 </html>
