--- a/20170822/index.html
+++ b/20170822/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
- <p>
-     <strong>C</strong>ascading
-     <strong>S</strong>tyle
-     <strong>S</strong>heets
- </p>
+<div class="container">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+
+</div>   
 </body>
 </html>
